--- a/index.html
+++ b/index.html
@@ -15,8 +15,36 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World!</h1>
-      <a href="" class="btn btn-primary">Click</a>
+      <h1>New York, USA</h1>
+      <ul>
+        <li>Friday 5:00</li>
+        <li>Clear</li>
+      </ul>
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+            alt="Clear"
+          />
+          12°C | °F
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 70%</li>
+            <li>Wind: 2 km/h</li>
+          </ul>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://illustrious-monstera-747abd.netlify.app/"
+          target="_blank"
+        >
+          Open source code</a
+        >
+        by Ganna Shcherbak
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
