--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -19,10 +20,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>New York, USA</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Friday 5:00</li>
-              <li>Clear</li>
+              <li id="description"></li>
             </ul>
           </div>
           <div class="row">
@@ -35,16 +36,14 @@
                 />
                 <div>
                   <strong id="temperature"></strong>
-                  <strong>12</strong><span class="units">°C| <a href="#">°F</a>
-                  </span>
+                  <span class="units"> °C| <a href="#">°F</a>
+                  </span></div>
                 </div>
-              </div>
               </div>
               <div class="col-6">
                 <ul>
-                  <li>Precipitation: 0%</li>
-                  <li>Humidity: 70%</li>
-                  <li>Wind: 2 km/h</li>
+                  <li>Humidity: <span id="humidity"></span>%</li>
+                  <li>Wind: <span id="wind"></span> km/h</li>
                 </ul>
               </div>
             </div>
