--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
           <small>
             <a
-              href="https://illustrious-monstera-747abd.netlify.app/"
+              href="https://github.com/ganna27/weather-app7-8"
               target="_blank"
             >
               Open source code</a
